add cookie banner component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -99,5 +99,8 @@
     </main>
 
     <app-footer></app-footer>
+
+    <!-- Adaugă banner-ul de cookies aici -->
+    <app-cookie-consent-banner></app-cookie-consent-banner>
   </mat-sidenav-content>
 </mat-sidenav-container>
