--- a/src/app/pages/donate/donate.component.html
+++ b/src/app/pages/donate/donate.component.html
@@ -30,10 +30,54 @@
   <section class="donate-info">
     <h2>Other Ways to Help</h2>
     <p>You can also donate via bank transfer, PayPal, or become a sponsor.</p>
-    <ul>
-      <li>IBAN: RO93BTRLRONCRT0232664802</li>
-      <li>PayPal: donate&#64;spiritanimals.ro</li>
-      <li><a routerLink="/adopt">Sponsor an Animal</a></li>
-    </ul>
+    <div class="donate-details">
+      <ul>
+        <li>
+          <strong>PayPal:</strong>
+          <a href="mailto:alexandrunicusorpopa@gmail.com"
+            >alexandrunicusorpopa&#64;gmail.com</a
+          >
+        </li>
+        <li>
+          <strong>Revolut:</strong>
+          revtag <strong>&#64;andreeta0z</strong> sau numărul de telefon
+          <strong>0734 902 430</strong>
+        </li>
+        <li>
+          <strong>Transfer bancar:</strong>
+          <ul>
+            <li>
+              <strong>Balaurea Andreea Raluca</strong><br />
+              Banca Transilvania<br />
+              Cont Lei:
+              <span style="word-break: break-all">RO93BTRLRONCRT0232664802</span
+              ><br />
+              Cont Euro:
+              <span style="word-break: break-all"
+                >RO70BTRLEURCRT0232664801</span
+              >
+            </li>
+            <li><strong>BT Pay:</strong> +40762 325 894</li>
+            <li>
+              <strong>ASOCIATIA LUI AMOS</strong><br />
+              <span style="word-break: break-all"
+                >RO66BTRLRONCRT0CT0807501</span
+              >
+            </li>
+          </ul>
+        </li>
+        <li>
+          Sprijiniți-ne pe Patreon, vă rugăm mult, printr-o donație
+          recurentă/lunară minusculă, chiar și de 1 dolar sau 2:<br />
+          <a
+            href="https://www.patreon.com/SpiritAnimalsSanctuary"
+            target="_blank"
+            rel="noopener"
+          >
+            https://www.patreon.com/SpiritAnimalsSanctuary
+          </a>
+        </li>
+      </ul>
+    </div>
   </section>
 </section>
