fix wrong routes for terms and privacy on the donate once page

--- a/src/app/pages/donate-once/donate-once.component.html
+++ b/src/app/pages/donate-once/donate-once.component.html
@@ -69,11 +69,11 @@
           />
           <label for="terms-donate">
             Am citit și sunt de acord cu
-            <a routerLink="/termeni-si-conditii" target="_blank"
+            <a routerLink="/terms-and-conditions" target="_blank"
               >Termenii și Condițiile</a
             >
             și cu
-            <a routerLink="/politica-de-confidentialitate" target="_blank"
+            <a routerLink="/privacy" target="_blank"
               >Politica de Confidențialitate</a
             >.
           </label>
