add animal-list grid, change navbar in romanian

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,42 +17,42 @@
       routerLinkActive="active-link"
       [routerLinkActiveOptions]="{ exact: true }"
       (click)="drawer.close()"
-      >Home</a
+      >Acasa</a
     >
     <a
       mat-button
       routerLink="/our-story"
       routerLinkActive="active-link"
       (click)="drawer.close()"
-      >Our Story</a
+      >Povestea noastra</a
     >
     <a
       mat-button
       routerLink="/animals"
       routerLinkActive="active-link"
       (click)="drawer.close()"
-      >Animals</a
+      >Rezidenții</a
     >
     <a
       mat-button
       routerLink="/adopt"
       routerLinkActive="active-link"
       (click)="drawer.close()"
-      >Adopt</a
+      >Adopta</a
     >
     <a
       mat-button
       routerLink="/donate"
       routerLinkActive="active-link"
       (click)="drawer.close()"
-      >Donate</a
+      >Doneaza</a
     >
     <a
       mat-button
       routerLink="/volunteer"
       routerLinkActive="active-link"
       (click)="drawer.close()"
-      >Volunteer</a
+      >Voluntariat</a
     >
     <a
       mat-button
@@ -68,7 +68,7 @@
       (click)="drawer.close()"
       routerLinkActive="active-link"
     >
-      Dashboard
+      Contul Tau
     </button>
     <button
       routerLink="/login"
@@ -77,7 +77,7 @@
       mat-button
       (click)="drawer.close()"
     >
-      Logout
+      Deconectare
     </button>
     <button
       routerLink="/login"
@@ -85,7 +85,7 @@
       mat-button
       (click)="drawer.close()"
     >
-      Login
+      Conectare
     </button>
   </mat-sidenav>
 
